# acore_ros_gui

./: CMakeLists.txt  README.md  package.xml
config/: config.ini  uav_config.ini
src/: ControlWindow.cpp  ControlWindow.h  RobotThread.cpp  RobotThread.h  main.cpp  ui_controlwindow.h
